--- a/_Figs/Fig 1/GLE/.gle/Fig1a/Fig1a_tex.tex
+++ b/_Figs/Fig 1/GLE/.gle/Fig1a/Fig1a_tex.tex
@@ -11,45 +11,63 @@
 \noindent{}\rule{1cm}{0.025cm}\framebox{\rule{1cm}{1cm}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$10^{-12}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize $10^{-10}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$10^{-10}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize $10^{-8}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$10^{-08}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize $10^{-11}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$10^{-06}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize $10^{-9}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$10^{-04}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny $10^{-16}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$I_{\rm D}\,/\, \si{\ampere}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\normalsize $\tau\,/\,\si{\second}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{-1}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny $10^{-15}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{0}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny $10^{-13}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{1}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny $10^{-11}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$V_{\rm GS}\,/\,\si{\volt}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny $10^{-09}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{Exp. data}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny $10^{-07}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$d=\SI{1.8}{\nano\metre}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize $10^{-12}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$d=\SI{2.4}{\nano\metre}$}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny $10^{-14}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{$d=\SI{2.4}{\nano\metre}$ (btb = 0)}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize $E_{\rm active}\,/\, \si{\joule\per\micro\metre}$}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny 2}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny 5}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize $P_{\rm off}\,/\, \si{\watt\per\micro\metre}$}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize Disconnect clock}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize Reduced size increases}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\footnotesize dynamic power}}
 
 \end{document}
