--- a/_Figs/Fig 6/GLE/.gle/Fig6a/Fig6a_tex.tex
+++ b/_Figs/Fig 6/GLE/.gle/Fig6a/Fig6a_tex.tex
@@ -44,9 +44,24 @@
 \noindent{}\rule{1cm}{0.025cm}\framebox{{\normalsize $V_{\rm PG}\,/\,\si{\volt}$}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{{\scriptsize mmFET}}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny mmFET}}
 
 \newpage
-\noindent{}\rule{1cm}{0.025cm}\framebox{{\scriptsize mmNCFET}}
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\tiny mmNCFET}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\scriptsize HP}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\scriptsize LP}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\scriptsize transient}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\scriptsize NC}}
+
+\newpage
+\noindent{}\rule{1cm}{0.025cm}\framebox{{\scriptsize region}}
 
 \end{document}
